--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   table_calendar: ^3.2.0
   json_annotation: ^4.9.0
   dio: ^5.8.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.15
