--- a/.github/workflows/build_release_apk.yml
+++ b/.github/workflows/build_release_apk.yml
@@ -2,49 +2,82 @@ name: Build and Email Flutter APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.32.8' # Use your Flutter version
+          channel: stable
 
-      # Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      # Build release APK
       - name: Build release APK
         run: flutter build apk --release
 
-      # Upload APK as artifact (optional)
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release
-          path: build/app/outputs/flutter-apk/app-release.apk
+      # Upload APK to Google Drive
+      - name: Upload APK to Google Drive
+        run: |
+          echo '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}' > sa.json
 
-      # Send APK via email
-      - name: Send email with APK
+          npm install -g @google-cloud/storage
+
+          # Rename APK
+          APK_PATH=build/app/outputs/flutter-apk/app-release.apk
+          UPLOAD_NAME=app-release-$(date +%s).apk
+
+          node <<'EOF'
+          const {Storage} = require('@google-cloud/storage');
+          const fs = require('fs');
+          const storage = new Storage({keyFilename: 'sa.json'});
+          const bucketName = 'thapar-app-apk-uploads-bucket'; // Change this name
+
+          (async () => {
+            // Ensure bucket exists
+            const [buckets] = await storage.getBuckets();
+            if (!buckets.find(b => b.name === bucketName)) {
+              await storage.createBucket(bucketName);
+            }
+
+            await storage.bucket(bucketName)
+              .upload('build/app/outputs/flutter-apk/app-release.apk', {
+                destination: '${UPLOAD_NAME}',
+                gzip: true
+              });
+
+            // Make file public
+            await storage.bucket(bucketName).file('${UPLOAD_NAME}').makePublic();
+
+            const publicUrl = `https://storage.googleapis.com/${bucketName}/${UPLOAD_NAME}`;
+            fs.writeFileSync('download_link.txt', publicUrl);
+            console.log('Uploaded to: ' + publicUrl);
+          })();
+          EOF
+
+      # Send Email with Download Link
+      - name: Send email
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
           server_port: 465
-          username: ${{ secrets.MAIL_USERNAME }}
-          password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "New Flutter Release APK"
+          username: ${{ secrets.MAIL_USER }}
+          password: ${{ secrets.MAIL_PASS }}
+          subject: "New Release APK"
           to: ${{ secrets.MAIL_TO }}
-          from: ${{ secrets.MAIL_FROM }}
-          body: "Attached is the latest release APK build from the main branch."
-          attachments: build/app/outputs/flutter-apk/app-release.apk
+          from: ${{ secrets.MAIL_USER }}
+          body: |
+            Hi,
+
+            A new APK build is available.
+
+            Download here: $(cat download_link.txt)
+
+            — GitHub Actions
