--- a/.github/workflows/build_release_apk.yml
+++ b/.github/workflows/build_release_apk.yml
@@ -1,83 +1,103 @@
-name: Build and Email Flutter APK
+name: Build, Upload APK to GCS and Send Link
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  build-apk:
+  build-upload-send:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # Checkout your repo
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      # Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          flutter-version: '3.22.2'
 
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build release APK
+      # Build the release APK
+      - name: Build APK
         run: flutter build apk --release
 
-      # Upload APK to Google Drive
-      - name: Upload APK to Google Drive
+      # Setup Node.js to use GCS and Nodemailer
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
         run: |
-          echo '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}' > sa.json
+          npm init -y
+          npm install @google-cloud/storage nodemailer
 
-          npm install -g @google-cloud/storage
-
-          # Rename APK
+      # Upload APK to Google Cloud Storage
+      - name: Upload to GCS
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' > sa.json
           APK_PATH=build/app/outputs/flutter-apk/app-release.apk
           UPLOAD_NAME=app-release-$(date +%s).apk
 
           node <<'EOF'
-          const {Storage} = require('@google-cloud/storage');
+          const { Storage } = require('@google-cloud/storage');
           const fs = require('fs');
-          const storage = new Storage({keyFilename: 'sa.json'});
-          const bucketName = 'thapar-app-apk-uploads-bucket'; // Change this name
+          const path = require('path');
+          const storage = new Storage({ keyFilename: 'sa.json' });
+          const bucketName = 'thapar-app-apk-uploads-bucket';  // change if needed
 
           (async () => {
-            // Ensure bucket exists
             const [buckets] = await storage.getBuckets();
             if (!buckets.find(b => b.name === bucketName)) {
               await storage.createBucket(bucketName);
             }
 
+            const uploadName = `app-release-${Date.now()}.apk`;
             await storage.bucket(bucketName)
               .upload('build/app/outputs/flutter-apk/app-release.apk', {
-                destination: '${UPLOAD_NAME}',
+                destination: uploadName,
                 gzip: true
               });
 
-            // Make file public
-            await storage.bucket(bucketName).file('${UPLOAD_NAME}').makePublic();
+            await storage.bucket(bucketName).file(uploadName).makePublic();
 
-            const publicUrl = `https://storage.googleapis.com/${bucketName}/${UPLOAD_NAME}`;
+            const publicUrl = \`https://storage.googleapis.com/\${bucketName}/\${uploadName}\`;
             fs.writeFileSync('download_link.txt', publicUrl);
-            console.log('Uploaded to: ' + publicUrl);
+            console.log('✅ Uploaded to: ' + publicUrl);
           })();
           EOF
 
-      # Send Email with Download Link
+      # Send email with the download link
       - name: Send email
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{ secrets.MAIL_USER }}
-          password: ${{ secrets.MAIL_PASS }}
-          subject: "New Release APK"
-          to: ${{ secrets.MAIL_TO }}
-          from: ${{ secrets.MAIL_USER }}
-          body: |
-            Hi,
+        run: |
+          DOWNLOAD_LINK=$(cat download_link.txt)
 
-            A new APK build is available.
+          node <<EOF
+          const nodemailer = require('nodemailer');
+          const transporter = nodemailer.createTransport({
+            service: 'gmail',
+            auth: {
+              user: '${{ secrets.EMAIL_USER }}',
+              pass: '${{ secrets.EMAIL_PASS }}'
+            }
+          });
 
-            Download here: $(cat download_link.txt)
+          const mailOptions = {
+            from: '${{ secrets.EMAIL_USER }}',
+            to: '${{ secrets.EMAIL_TO }}',
+            subject: 'New APK Build Available',
+            text: 'Download the latest APK here: ' + process.env.DOWNLOAD_LINK
+          };
 
-            — GitHub Actions
+          transporter.sendMail(mailOptions, function(error, info){
+            if (error) {
+              console.error(error);
+              process.exit(1);
+            } else {
+              console.log('📧 Email sent: ' + info.response);
+            }
+          });
+          EOF
+        env:
+          DOWNLOAD_LINK: ${{ steps.upload.outputs.link }}
