--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,34 +28,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.3
+  bloc: ^9.0.0
+  cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
-
-  awesome_snackbar_content: ^0.1.3
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  freezed_annotation: ^2.4.4
   get_it: ^8.0.3
   go_router: ^15.1.3
-  shared_preferences: ^2.5.3
-  
-  top_snackbar_flutter: ^3.3.0
   http: ^1.4.0
-  freezed_annotation: ^2.4.4
-  flutter_bloc: ^9.1.1
-  bloc: ^9.0.0
-  logger: ^2.5.0
-  table_calendar: ^3.2.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
-  dio: ^5.8.0+1
+  logger: ^2.5.0
+  shared_preferences: ^2.5.3
+  table_calendar: ^3.2.0
+  top_snackbar_flutter: ^3.3.0
   url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.15
-  freezed: ^2.5.2
-  json_serializable: ^6.9.5
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,10 +56,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
+  freezed: ^2.5.2
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -101,10 +97,8 @@ flutter:
           weight: 900
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
